omq-zeromq/tests/trybuild/compat-fail/message_try_into_vec_u8.stderr
error[E0277]: the trait bound `Vec<u8>: TryFrom<ZmqMessage>` is not satisfied
 --> tests/trybuild/compat-fail/message_try_into_vec_u8.rs:6:30
  |
6 |     let _body: Vec<u8> = msg.try_into().unwrap();
  |                              ^^^^^^^^ the trait `From<ZmqMessage>` is not implemented for `Vec<u8>`
  |
  = help: the following other types implement trait `From<T>`:
            `Vec<u8>` implements `From<&str>`
            `Vec<u8>` implements `From<ByteString>`
            `Vec<u8>` implements `From<CString>`
            `Vec<u8>` implements `From<String>`
            `Vec<u8>` implements `From<bytes::bytes::Bytes>`
            `Vec<u8>` implements `From<bytes::bytes_mut::BytesMut>`
  = note: required for `ZmqMessage` to implement `Into<Vec<u8>>`
  = note: required for `Vec<u8>` to implement `TryFrom<ZmqMessage>`
  = note: required for `ZmqMessage` to implement `TryInto<Vec<u8>>`
